--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -26,7 +26,7 @@
         <th scope="col">Id</th>
         <th scope="col">Name</th>
         <th scope="col">Price $</th>
-
+        <th scope="col">Date</th>
         <td><td>
         <th scope="col"> </th>
         <th scope="col"></th>
@@ -43,6 +43,7 @@
         <th scope="row">${product.id}</th>
         <td>${product.name}</td>
         <td>${product.price}</td>
+        <td>${product.creationDate}</td>
         <td>
         <td>
         <td>
