Added web.xml dispatcher-servlet.xml logback.xml applicationContext.xml

--- a/src/main/webapp/WEB-INF/view/products.html
+++ b/src/main/webapp/WEB-INF/view/products.html
@@ -46,8 +46,7 @@
         <th scope="row">${product.id}</th>
         <td>${product.name}</td>
         <td>${product.price}</td>
-        <td>${product.creationDate}</td>
-        <td>
+        <td>${product.creationDate?datetime.iso?string('dd MMM yyyy')}<td>
 
 
         <td>
