@GetMapping views DONE (all products,add form,edit form)

--- a/src/main/webapp/WEB-INF/view/products.html
+++ b/src/main/webapp/WEB-INF/view/products.html
@@ -50,7 +50,7 @@
 
 
         <td>
-            <a class="btn btn-dark" href="/products/edit?id=${product.id}" target="_self"
+            <a class="btn btn-dark" href="/products/edit/${product.id}" target="_self"
                style="float: right; margin-left: 60px;">
                 <button class="btn btn-dark">&#9999 &#65039</button>
             </a>
